# world-simulation-cpp

./: CMakeLists.txt  Organizm.cpp  Organizm.h  Swiat.cpp  Swiat.h  jednostki.h  main.cpp
roslina/: Roslina.cpp  Roslina.h
roslina/rosliny/: BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  Guarana.cpp  Guarana.h  Mlecz.cpp  Mlecz.h  Trawa.cpp  Trawa.h  WilczeJagody.cpp  WilczeJagody.h
zwierze/: Czlowiek.cpp  Czlowiek.h  Zwierze.cpp  Zwierze.h
zwierze/zwierzeta/: Antylopa.cpp  Antylopa.h  Lis.cpp  Lis.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h
