cmake_minimum_required(VERSION 3.17)
project(SymulacjaSwiata)

set(CMAKE_CXX_STANDARD 14)

add_executable(SymulacjaSwiata main.cpp Swiat.cpp Swiat.h Organizm.cpp Organizm.h zwierze/Zwierze.cpp zwierze/Zwierze.h jednostki.h zwierze/zwierzeta/Wilk.cpp zwierze/zwierzeta/Wilk.h zwierze/zwierzeta/Owca.cpp zwierze/zwierzeta/Owca.h zwierze/zwierzeta/Lis.cpp zwierze/zwierzeta/Lis.h zwierze/zwierzeta/Zolw.cpp zwierze/zwierzeta/Zolw.h zwierze/zwierzeta/Antylopa.cpp zwierze/zwierzeta/Antylopa.h roslina/Roslina.cpp roslina/Roslina.h roslina/rosliny/Trawa.cpp roslina/rosliny/Trawa.h roslina/rosliny/Mlecz.cpp roslina/rosliny/Mlecz.h roslina/rosliny/Guarana.cpp roslina/rosliny/Guarana.h roslina/rosliny/WilczeJagody.cpp roslina/rosliny/WilczeJagody.h roslina/rosliny/BarszczSosnowskiego.cpp roslina/rosliny/BarszczSosnowskiego.h zwierze/Czlowiek.cpp zwierze/Czlowiek.h)